# einvoice-lens

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  mkdocs.yaml  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: compliance.yml  publish.yml  test.yml
docs/: headstart.md  index.md  sad.md  troubleshooting.md
einvoice_lens/: __init__.py  _constant.py  _util.py  cli.py  engine.py  model.py
tests/: test_extract_document.py
